fix(Navbar.jsx): remove unnecessary line breaks in JSX for better readability fix(Navbar.jsx): add alt text to menu button image for accessibility fix(Navbar.jsx): remove commented-out code for better maintainability fix(Navbar.module.css): simplify background gradient to a solid color for consistency

--- a/src/components/Navbar/Navbar.module.css
+++ b/src/components/Navbar/Navbar.module.css
@@ -60,11 +60,7 @@
     gap: 13px;
     border-radius: 10px;
     background: rgb(255, 255, 255);
-    background: linear-gradient(
-      0deg,
-      rgba(255, 173, 241, 0.2) 0%,
-      rgb(255, 171, 230) 100%
-    );
+    background: #ffafee;
     padding: 24px 33px;
     box-shadow: 0 0 4px 0 rgba(255, 246, 246, 0.25);
   }
